--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -42,5 +42,16 @@
         <div class="container">
             {% block content %}{% endblock %}
         </div>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        
+        {% if messages %}
+        
+        {% for category,message in messages %}
+        <div class="alert alert-{{ category }}">
+            {{message}}
+        </div>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
     </body>
 </html>
