--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -11,16 +11,19 @@
         <!-- Bootstrap -->
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
         <!-- Blog -->
+        
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-
+        
         <!-- JavaScript -->
         <!-- jQuery -->
         <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
         <!-- Bootstrap -->
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+        
     </head>
 
     <body>
+        
         <div class="navbar navbar-inverse navbar-static-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
@@ -30,7 +33,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="{{ url_for('entries') }}">Blogful</a>
+                    <a class="navbar-brand" href="{{ url_for('entries') }}">Blogful-Uday</a> 
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -42,16 +45,5 @@
         <div class="container">
             {% block content %}{% endblock %}
         </div>
-        {% with messages = get_flashed_messages(with_categories=true) %}
-        
-        {% if messages %}
-        
-        {% for category,message in messages %}
-        <div class="alert alert-{{ category }}">
-            {{message}}
-        </div>
-        {% endfor %}
-        {% endif %}
-        {% endwith %}
     </body>
 </html>
